prototype/src/compilers/antlr/url/UrlParser.java
package compilers.antlr.url;

// Generated from ./Url.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import grammar.addons.TreeNode;
import grammar.grammar.NonTerminal;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class UrlParser extends Parser {
	TreeNode node;
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36;
	public static final int
		RULE_parse = 0, RULE_url = 1, RULE_httpaddress = 2, RULE_ftpaddress = 3, 
		RULE_telnetaddress = 4, RULE_gopheraddress = 5, RULE_login = 6, RULE_hostport = 7, 
		RULE_host = 8, RULE_hostname = 9, RULE_hostnumber = 10, RULE_port = 11, 
		RULE_path = 12, RULE_search = 13, RULE_selector = 14, RULE_user = 15, 
		RULE_password = 16, RULE_gtype = 17, RULE_xalpha = 18, RULE_xalphas = 19, 
		RULE_ialpha = 20, RULE_alpha = 21, RULE_digit = 22, RULE_safe = 23, RULE_extra = 24, 
		RULE_digits = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "url", "httpaddress", "ftpaddress", "telnetaddress", "gopheraddress", 
			"login", "hostport", "host", "hostname", "hostnumber", "port", "path", 
			"search", "selector", "user", "password", "gtype", "xalpha", "xalphas", 
			"ialpha", "alpha", "digit", "safe", "extra", "digits"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'h'", "'t'", "'p'", "':'", "'/'", "'?'", "'f'", "'e'", "'l'", 
			"'n'", "'g'", "'o'", "'r'", "'@'", "'.'", "'+'", "'a'", "'b'", "'c'", 
			"'A'", "'B'", "'C'", "'0'", "'1'", "'2'", "'3'", "'$'", "'-'", "'_'", 
			"'&'", "'!'", "'*'", "'('", "')'", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Url.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UrlParser(TokenStream input, TreeNode node) {
		super(input);
		this.node = node;
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParseContext extends ParserRuleContext {
		public UrlContext url() {
			return getRuleContext(UrlContext.class,0);
		}
		public TerminalNode EOF() { return getToken(UrlParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			url();
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UrlContext extends ParserRuleContext {
		public HttpaddressContext httpaddress() {
			return getRuleContext(HttpaddressContext.class,0);
		}
		public FtpaddressContext ftpaddress() {
			return getRuleContext(FtpaddressContext.class,0);
		}
		public TelnetaddressContext telnetaddress() {
			return getRuleContext(TelnetaddressContext.class,0);
		}
		public GopheraddressContext gopheraddress() {
			return getRuleContext(GopheraddressContext.class,0);
		}
		public UrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_url; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterUrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitUrl(this);
		}
	}

	public final UrlContext url() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		UrlContext _localctx = new UrlContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_url);
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				httpaddress();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				ftpaddress();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				telnetaddress();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 4);
				{
				setState(58);
				gopheraddress();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HttpaddressContext extends ParserRuleContext {
		public HostportContext hostport() {
			return getRuleContext(HostportContext.class,0);
		}
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public SearchContext search() {
			return getRuleContext(SearchContext.class,0);
		}
		public HttpaddressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_httpaddress; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterHttpaddress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitHttpaddress(this);
		}
	}

	public final HttpaddressContext httpaddress() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		HttpaddressContext _localctx = new HttpaddressContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_httpaddress);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(T__0);
			setState(62);
			match(T__1);
			setState(63);
			match(T__1);
			setState(64);
			match(T__2);
			setState(65);
			match(T__3);
			setState(66);
			match(T__4);
			setState(67);
			match(T__4);
			setState(68);
			hostport();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(69);
				match(T__4);
				setState(70);
				path();
				}
			}

			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(73);
				match(T__5);
				setState(74);
				search();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FtpaddressContext extends ParserRuleContext {
		public LoginContext login() {
			return getRuleContext(LoginContext.class,0);
		}
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public FtpaddressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ftpaddress; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterFtpaddress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitFtpaddress(this);
		}
	}

	public final FtpaddressContext ftpaddress() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		FtpaddressContext _localctx = new FtpaddressContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ftpaddress);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__6);
			setState(78);
			match(T__1);
			setState(79);
			match(T__2);
			setState(80);
			match(T__3);
			setState(81);
			match(T__4);
			setState(82);
			match(T__4);
			setState(83);
			login();
			setState(84);
			match(T__4);
			setState(85);
			path();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TelnetaddressContext extends ParserRuleContext {
		public LoginContext login() {
			return getRuleContext(LoginContext.class,0);
		}
		public TelnetaddressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_telnetaddress; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterTelnetaddress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitTelnetaddress(this);
		}
	}

	public final TelnetaddressContext telnetaddress() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		TelnetaddressContext _localctx = new TelnetaddressContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_telnetaddress);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__1);
			setState(88);
			match(T__7);
			setState(89);
			match(T__8);
			setState(90);
			match(T__9);
			setState(91);
			match(T__7);
			setState(92);
			match(T__1);
			setState(93);
			match(T__3);
			setState(94);
			match(T__4);
			setState(95);
			match(T__4);
			setState(96);
			login();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GopheraddressContext extends ParserRuleContext {
		public HostportContext hostport() {
			return getRuleContext(HostportContext.class,0);
		}
		public GtypeContext gtype() {
			return getRuleContext(GtypeContext.class,0);
		}
		public SearchContext search() {
			return getRuleContext(SearchContext.class,0);
		}
		public SelectorContext selector() {
			return getRuleContext(SelectorContext.class,0);
		}
		public GopheraddressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gopheraddress; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterGopheraddress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitGopheraddress(this);
		}
	}

	public final GopheraddressContext gopheraddress() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		GopheraddressContext _localctx = new GopheraddressContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_gopheraddress);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__10);
			setState(99);
			match(T__11);
			setState(100);
			match(T__2);
			setState(101);
			match(T__0);
			setState(102);
			match(T__7);
			setState(103);
			match(T__12);
			setState(104);
			match(T__3);
			setState(105);
			match(T__4);
			setState(106);
			match(T__4);
			setState(107);
			hostport();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(108);
				match(T__4);
				setState(109);
				gtype();
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 137438822400L) != 0)) {
					{
					setState(110);
					selector();
					}
				}

				}
			}

			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(115);
				match(T__5);
				setState(116);
				search();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoginContext extends ParserRuleContext {
		public UserContext user() {
			return getRuleContext(UserContext.class,0);
		}
		public HostportContext hostport() {
			return getRuleContext(HostportContext.class,0);
		}
		public PasswordContext password() {
			return getRuleContext(PasswordContext.class,0);
		}
		public LoginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_login; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterLogin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitLogin(this);
		}
	}

	public final LoginContext login() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		LoginContext _localctx = new LoginContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_login);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			user();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(120);
				match(T__3);
				setState(121);
				password();
				}
			}

			setState(124);
			match(T__13);
			setState(125);
			hostport();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HostportContext extends ParserRuleContext {
		public HostContext host() {
			return getRuleContext(HostContext.class,0);
		}
		public PortContext port() {
			return getRuleContext(PortContext.class,0);
		}
		public HostportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hostport; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterHostport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitHostport(this);
		}
	}

	public final HostportContext hostport() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		HostportContext _localctx = new HostportContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_hostport);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			host();
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(128);
				match(T__3);
				setState(129);
				port();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HostContext extends ParserRuleContext {
		public HostnameContext hostname() {
			return getRuleContext(HostnameContext.class,0);
		}
		public HostnumberContext hostnumber() {
			return getRuleContext(HostnumberContext.class,0);
		}
		public HostContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_host; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterHost(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitHost(this);
		}
	}

	public final HostContext host() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		HostContext _localctx = new HostContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_host);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				hostname();
				}
				break;
			case T__22:
			case T__23:
			case T__24:
			case T__25:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				hostnumber();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HostnameContext extends ParserRuleContext {
		public IalphaContext ialpha() {
			return getRuleContext(IalphaContext.class,0);
		}
		public HostnameContext hostname() {
			return getRuleContext(HostnameContext.class,0);
		}
		public HostnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hostname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterHostname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitHostname(this);
		}
	}

	public final HostnameContext hostname() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		HostnameContext _localctx = new HostnameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_hostname);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			ialpha();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(137);
				match(T__14);
				setState(138);
				hostname();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HostnumberContext extends ParserRuleContext {
		public List<DigitsContext> digits() {
			return getRuleContexts(DigitsContext.class);
		}
		public DigitsContext digits(int i) {
			return getRuleContext(DigitsContext.class,i);
		}
		public HostnumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hostnumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterHostnumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitHostnumber(this);
		}
	}

	public final HostnumberContext hostnumber() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		HostnumberContext _localctx = new HostnumberContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_hostnumber);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			digits();
			setState(142);
			match(T__14);
			setState(143);
			digits();
			setState(144);
			match(T__14);
			setState(145);
			digits();
			setState(146);
			match(T__14);
			setState(147);
			digits();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PortContext extends ParserRuleContext {
		public DigitsContext digits() {
			return getRuleContext(DigitsContext.class,0);
		}
		public PortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterPort(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitPort(this);
		}
	}

	public final PortContext port() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		PortContext _localctx = new PortContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_port);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			digits();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PathContext extends ParserRuleContext {
		public XalphasContext xalphas() {
			return getRuleContext(XalphasContext.class,0);
		}
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public PathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitPath(this);
		}
	}

	public final PathContext path() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		PathContext _localctx = new PathContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_path);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			xalphas();
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(152);
				match(T__4);
				setState(153);
				path();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SearchContext extends ParserRuleContext {
		public XalphasContext xalphas() {
			return getRuleContext(XalphasContext.class,0);
		}
		public SearchContext search() {
			return getRuleContext(SearchContext.class,0);
		}
		public SearchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_search; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterSearch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitSearch(this);
		}
	}

	public final SearchContext search() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		SearchContext _localctx = new SearchContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_search);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			xalphas();
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(157);
				match(T__15);
				setState(158);
				search();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectorContext extends ParserRuleContext {
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public SelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterSelector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitSelector(this);
		}
	}

	public final SelectorContext selector() throws RecognitionException {
		// START Entry instrumentation
		String methodName = new Object(){}.getClass().getEnclosingMethod().getName();
		TreeNode current = new TreeNode(new NonTerminal(methodName), this.node, null);
		this.node.addChildren(current);
		this.node = current;
		// END
		SelectorContext _localctx = new SelectorContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_selector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			path();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		// START Exit instrumentation
		this.node = this.node.parent;
		// END
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UserContext extends ParserRuleContext {
		public XalphasContext xalphas() {
			return getRuleContext(XalphasContext.class,0);
		}
		public UserContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_user; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).enterUser(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UrlListener ) ((UrlListener)listener).exitUser(this);
		}
	}
